chore: Update package.json and add License file

--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "displayName": "MemoTheme",
   "description": "",
   "publisher": "MemoTheme",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "engines": {
     "vscode": "^1.91.0"
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/mhmetglrq/memo-theme"
   },
   "categories": [
     "Themes"
